k8s/client-dplt.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-dplt
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myclient
  template:
    metadata:
      labels:
        app: myclient
    spec:
      containers:
      - name: client-dplt
        image: client
        ports:
        - containerPort: 3000
        imagePullPolicy: IfNotPresent
