k8s/comments-dplt.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-dplt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mycomments
  template:
    metadata:
      labels:
        app: mycomments
    spec:
      containers:
      - name: comments-dplt
        image: comments
        resources:
          limits:
            memory: "1536Mi"
            cpu: "500m"
        ports:
        - containerPort: 4001
        imagePullPolicy: IfNotPresent
