k8s/event-bus-dplt.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-dplt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myeventbus
  template:
    metadata:
      labels:
        app: myeventbus
    spec:
      containers:
      - name: event-bus-dplt
        image: event-bus
        ports:
        - containerPort: 4005
        imagePullPolicy: IfNotPresent
