k8s/moderation-dplt.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-dplt
spec:
  selector:
    matchLabels:
      app: mymoderation
  template:
    metadata:
      labels:
        app: mymoderation
    spec:
      containers:
      - name: moderation-dplt
        image: moderation
        ports:
        - containerPort: 4003
        imagePullPolicy: IfNotPresent
