k8s/posts-dplt.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-dplt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myposts
  template:
    metadata:
      labels:
        app: myposts
    spec:
      containers:
      - name: posts-dplt
        image: posts
        ports:
        - containerPort: 4000
        imagePullPolicy: IfNotPresent
