k8s/query-dplt.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-dplt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myquery
  template:
    metadata:
      labels:
        app: myquery
    spec:
      containers:
      - name: query-dplt
        image: query
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 4002
        imagePullPolicy: IfNotPresent
