k8s/client-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: myclient
  ports:
  - port: 3000
    targetPort: 80
