k8s/comments-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: ClusterIP
  selector:
    app: mycomments
  ports:
  - name: mycomments
    protocol: TCP
    port: 4001
    targetPort: 4001
