k8s/event-bus-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: NodePort
  selector:
    app: myevent
  ports:
  - name: myevent
    protocol: TCP
    port: 4005
    targetPort: 80
