k8s/moderation-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: ClusterIP
  selector:
    app: mymoderation
  ports:
  - name: mymoderation
    protocol: TCP
    port: 4003
    targetPort: 4003
