k8s/posts-clusterip-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: myposts
  ports:
  - name: myposts
    protocol: TCP
    port: 4000
    targetPort: 4000
