k8s/query-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: ClusterIP
  selector:
    app: myquery
  ports:
  - name: myquery
    protocol: TCP
    port: 4002
    targetPort: 4002
