k8s/client-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: ImplementationSpecific #on utilise des regex
        path: /?(.*)  #on utilise donc un regex dans l'adresse
        backend:
          service:
            name: client-srv
            port: 
              number: 3000
  - host: localhost
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /posts/?(.*)/comments
        backend:
          service:
            name: comments-srv
            port: 
              number: 4001
  - host: localhost
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /posts/create
        backend:
          service:
            name: posts-clusterip-srv
            port: 
              number: 4000
  - host: localhost
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /posts
        backend:
          service:
            name: query-srv
            port: 
              number: 4002
